--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "currency-list": "^1.0.6",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.7.0",
@@ -20,6 +21,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "react-tabs": "^4.0.1",
     "reactstrap": "^9.0.1",
     "redux": "^4.1.2",
