--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "currency-list": "^1.0.6",
+    "hamburger-react": "^2.4.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.7.0",
