--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hamburger-react": "^2.4.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-darkreader": "^1.5.6",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
